# file-renamer

./: .gitattributes  .gitignore  .xonshrc  README.md  app-linux.spec  app-win.spec  file-renamer.pyproject  file-renamer.sh  file-renamer.xsh  io.github.mcarlos101.file-renamer.desktop  io.github.mcarlos101.file-renamer.json  io.github.mcarlos101.file-renamer.metainfo.xml  pyinstaller-linux.spec  pyinstaller-win.spec  pyproject.toml  pysidedeploy.spec  python3-Unidecode.json  requirements-dev.txt  requirements.txt  run.sh  setup.cfg  snapcraft.yaml
.github/workflows/: actions.yml
docs/: LICENSE.txt  Version.txt
file-renamer/: form.ui
file-renamer/style/: default.qss
html/: license.html  qt-for-python.html  version.html
linux/: file-renamer.desktop  file-renamer.sh  run.sh
pip/: requirements-dev.txt  requirements.txt
snap/: snapcraft.yaml
spec/: app-linux.spec  app-win.spec  pysidedeploy.spec
src/: about.py  form.ui  main.py  rename.py  ui_form.py  widget.py
src/file-renamer/: form.ui  rename.py  ui_form.py  widget.py
src/file-renamer/lib/: exceptions.py  files.py
src/file_renamer/: __init__.py  __main__.py  cli.py  docs.qrc  form.ui  gui.py  icons.qrc  rc_docs.py  rc_icons.py  rc_media.qrc  rc_themes.py  rc_themes.qrc  rename.py  ui_form.py  widget.py
src/file_renamer/cli/: __init__.py
src/file_renamer/docs/: qt-for-python.txt  version.txt
src/file_renamer/html/: rbe.qrc  rc_imagine.qrc  rc_ui.py  ui.py  ui.qrc
src/file_renamer/html/media/lyrics/: John-Lennon-Imagine-1971.ass
src/file_renamer/icons/: file-renamer-1024x1024.icns  file-renamer-512x512.icns
src/file_renamer/lib/: case.py  case_insensitive.py  exceptions.py  files.py  html.py
src/file_renamer/media/lyrics/: The-Lost-Children-Of-Babylon-The-Venus-Project-2010.ass
src/file_renamer/themes/: theme.py
src/file_renamer/themes/dark/: dark_linux.py  dark_windows.py  default.qss
src/file_renamer/themes/light/: default.qss  light_linux.py  light_windows.py
src/lib/: case_insensitive.py  exceptions.py  files.py
src/style/: default.qss  default_win.qss
themes/dark/: default.qss
themes/light/: default.qss
windows/: file-renamer.bat  run.ps1  venv.ps1
xonsh/: .xonshrc
