[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/file_renamer"]

[tool.hatch.build.targets.wheel.force-include]
"icons" = "src/file_renamer/icons"

[project]
name = "file-renamer"
authors = [
    { name="Carlos"},
]
description = "Rename files using a GUI desktop app for Linux & Windows. macOS not yet tested."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "PySide6==6.7.0",
    "PySide6-Addons==6.7.0",
    "PySide6-Essentials==6.7.0",
    "shiboken6==6.7.0",
    "Unidecode==1.3.8",
]
keywords = ["rename", "file"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: OS Independent",
]
dynamic = [
    "version",
]

[tool.hatch.version]
path = "src/file_renamer/version.py"

[project.scripts]
file-renamer = "file_renamer.cli:start_app"

[project.urls]
Homepage = "https://github.com/mcarlos101/file-renamer"
Repository = "https://github.com/mcarlos101/file-renamer.git"
