[metadata]
name = io.github.mcarlos101.file-renamer
version = 1.1.5
url = https://github.com/mcarlos101/file-renamer
author = Carlos
maintainer = Carlos
description = Rename files using a GUI desktop app for Linux & Windows
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Intended Audience :: End Users/Desktop
    Topic :: Utilities
    Programming Language :: Python
    Operating System :: POSIX :: Linux
keywords = app gui rename rename-files batch-rename-files renamer linux-desktop ubuntu fedora windows-desktop macos-desktop pyside6 qt-creator

[options]
packages = find_namespace:
include_package_data = True
package_dir =
    =src
install_requires =
    Unidecode

[options.packages.find]
where = src

[options.data_files]
share/applications =
    io.github.mcarlos101.file-renamer.desktop
share/icons/hicolor/scalable/apps =
    io.github.mcarlos101.file-renamer.svg
share/metainfo =
     io.github.mcarlos101.file-renamer.metainfo.xml

[options.entry_points]
console_scripts =
    file-renamer = file_renamer.cli:start_app

